k8s/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: portfolio-ingress
  namespace: portfolio-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'

spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /portfolio
            backend:
              service:
                name: portfolio-svc
                port:
                  number: 3000
